# private_chat

./: Cargo.toml  auth.rs
src/: README.md  auth.rs  lib.rs  main.rs  protocol.rs  types.rs
src/routes/: login.rs
